--- a/apps/hubot/.jenkins/openshift/build-master.yaml
+++ b/apps/hubot/.jenkins/openshift/build-master.yaml
@@ -2,7 +2,7 @@ apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   creationTimestamp: null
-  name: jenkins
+  name: jenkins-hubot
 objects:
 - apiVersion: v1
   kind: ImageStream
@@ -35,7 +35,7 @@ objects:
         memory: 1Gi
     runPolicy: SerialLatestOnly
     source:
-      contextDir: .jenkins/docker
+      contextDir: apps/hubot/.jenkins/docker
       git:
         ref: ${SOURCE_REPOSITORY_REF}
         uri: ${SOURCE_REPOSITORY_URL}
@@ -57,7 +57,7 @@ parameters:
   displayName: Name
   name: NAME
   required: true
-  value: jenkins
+  value: jenkins-hubot
 - description: A name suffix used for all objects
   displayName: Suffix
   name: SUFFIX
