--- a/apps/hubot/.jenkins/openshift/build-slave.yaml
+++ b/apps/hubot/.jenkins/openshift/build-slave.yaml
@@ -2,7 +2,7 @@ apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   creationTimestamp: null
-  name: jenkins
+  name: jenkins-hubot
 objects:
 - apiVersion: v1
   kind: ImageStream
@@ -81,7 +81,7 @@ parameters:
   displayName: Name
   name: NAME
   required: true
-  value: jenkins
+  value: jenkins-hubot
 - description: A name suffix used for all objects
   displayName: Suffix
   name: SUFFIX
@@ -101,10 +101,10 @@ parameters:
   value: "jenkins:build-v2.0-0"
 - name: SOURCE_GIT_URL
   required: true
-  value: https://github.com/cvarjao-o/hello-world.git
+  value: https://github.com/BCDevOps/platform-services/.git
 - name: SOURCE_GIT_REF
   required: true
   value: master
 - name: SOURCE_CONTEXT_DIR
   required: true
-  value: .jenkins/docker-slave
+  value: apps/hubot
