--- a/apps/hubot/.jenkins/openshift/build-slave.yaml
+++ b/apps/hubot/.jenkins/openshift/build-slave.yaml
@@ -81,7 +81,7 @@ parameters:
   displayName: Name
   name: NAME
   required: true
-  value: jenkins
+  value: jenkins-hubot
 - description: A name suffix used for all objects
   displayName: Suffix
   name: SUFFIX
@@ -107,4 +107,4 @@ parameters:
   value: master
 - name: SOURCE_CONTEXT_DIR
   required: true
-  value: .jenkins/docker-slave
+  value: apps/hubot/.jenkins/docker-slave
